syntax = "proto3";

package calculator;

option go_package = "github.com/aldidoanta/learn-golang-grpc/calculator/proto";

message PrimeRequest {
    int32 number = 1;
}

message PrimeResponse {
    int32 primeFactor = 1;
}